--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 .vs/
-
 TestForms/bin/
 TestForms/obj/
+Mono.Types/bin/
+Mono.Types/obj/
+Mono.WebBrowser/bin/
+Mono.WebBrowser/obj/
+System.Windows.Forms/bin/
+System.Windows.Forms/obj/
