Cleanup and improvements.

--- a/System.Windows.Forms/System.Windows.Forms.csproj
+++ b/System.Windows.Forms/System.Windows.Forms.csproj
@@ -133,7 +133,7 @@
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.6.0" />
     <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0-preview1.19504.10" />
     <PackageReference Include="System.Resources.Extensions" Version="4.6.0" />
     <PackageReference Include="System.Security.Permissions" Version="4.6.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.6.0" />
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Mono.Types\Mono.Types.csproj" />
     <ProjectReference Include="..\Mono.WebBrowser\Mono.WebBrowser.csproj" />
+    <ProjectReference Include="..\System.Drawing.Design\System.Drawing.Design.csproj" />
   </ItemGroup>
 
   <ItemGroup>
