--- a/System.Drawing.Design/System.Drawing.Design.csproj
+++ b/System.Drawing.Design/System.Drawing.Design.csproj
@@ -5,8 +5,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="System.Drawing.Design\BitmapEditor.cs" />
+    <Compile Remove="System.Drawing.Design\ColorEditor.cs" />
+    <Compile Remove="System.Drawing.Design\ContentAlignmentEditor.cs" />
+    <Compile Remove="System.Drawing.Design\CursorEditor.cs" />
+    <Compile Remove="System.Drawing.Design\FontEditor.cs" />
+    <Compile Remove="System.Drawing.Design\FontNameEditor.cs" />
+    <Compile Remove="System.Drawing.Design\IconEditor.cs" />
+    <Compile Remove="System.Drawing.Design\ImageEditor.cs" />
+    <Compile Remove="System.Drawing.Design\MetafileEditor.cs" />
+    <Compile Remove="System.Drawing.Design\ToolboxItemContainer.cs" />
+    <Compile Remove="System.Drawing.Design\ToolboxItemCreator.cs" />
+    <Compile Remove="System.Drawing.Design\ToolboxService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Mono.Types\Mono.Types.csproj" />
-    <ProjectReference Include="..\System.Windows.Forms\System.Windows.Forms.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assembly\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0-preview1.19504.10" />
   </ItemGroup>
 
 </Project>
