--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ TestForms/bin/
 TestForms/obj/
 SimpleTest/bin/
 SimpleTest/obj/
+SimpleTest.NetCore/bin/
+SimpleTest.NetCore/obj/
+SimpleTest.NetFX/bin/
+SimpleTest.NetFX/obj/
 Mono.Types/bin/
 Mono.Types/obj/
 Mono.WebBrowser/bin/
