--- a/Mono.WebBrowser/Mono.WebBrowser.csproj
+++ b/Mono.WebBrowser/Mono.WebBrowser.csproj
@@ -2,6 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Authors>Various Mono authors, Daniel Van Noord</Authors>
+    <Company>None</Company>
+    <Description>A .Net Core implementation of the Mono Web Browser library.</Description>
+    <Copyright>(c) Various Mono authors, Daniel Van Noord 2019</Copyright>
+    <PackageLicenseExpression></PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/DanielVanNoord/System.Windows.Forms</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/DanielVanNoord/System.Windows.Forms</RepositoryUrl>
+    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseFile>License.txt</PackageLicenseFile>
+    <Version>1.0.0-alpha1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\License.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
