--- a/System.Drawing.Design/System.Drawing.Design.csproj
+++ b/System.Drawing.Design/System.Drawing.Design.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Copyright>(c) Various Mono authors, Daniel Van Noord 2019</Copyright>
+    <Authors>Various Mono authors, Daniel Van Noord</Authors>
+    <Description>A .Net Core implementation of the Mono System.Drawing.Design library. This is built on top of System.Drawing.Common.</Description>
+    <PackageProjectUrl>https://github.com/DanielVanNoord/System.Windows.Forms</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/DanielVanNoord/System.Windows.Forms</RepositoryUrl>
+    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <Company>None</Company>
+    <PackageLicenseFile>License.txt</PackageLicenseFile>
+    <Version>1.0.0-alpha1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,6 +40,13 @@
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="4.7.0-preview1.19504.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\License.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
