Changed package id to avoid a namespace collision

--- a/Mono.WebBrowser/Mono.WebBrowser.csproj
+++ b/Mono.WebBrowser/Mono.WebBrowser.csproj
@@ -13,6 +13,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <Version>1.0.0-alpha1</Version>
+    <PackageId>Core.Mono.WebBrowser</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
