--- a/System.Windows.Forms/System.Windows.Forms.csproj
+++ b/System.Windows.Forms/System.Windows.Forms.csproj
@@ -17,6 +17,7 @@
     <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <Version>1.0.0-alpha1</Version>
+    <PackageId>Core.System.Windows.Forms</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
