--- a/System.Drawing.Design/System.Drawing.Design.csproj
+++ b/System.Drawing.Design/System.Drawing.Design.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0-preview1.19504.10" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
