--- a/Mono.WebBrowser/Mono.WebBrowser.csproj
+++ b/Mono.WebBrowser/Mono.WebBrowser.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Authors>Various Mono authors, Daniel Van Noord</Authors>
     <Company>None</Company>
     <Description>A .Net Core implementation of the Mono Web Browser library.</Description>
